--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,8 @@ button {
 	letter-spacing: 0.06em;
 }
 
+/* Модальное окно */
+
 .backdrop {
 	position: fixed;
 	top: 0;
@@ -250,12 +252,13 @@ button {
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
-	transition: opacity var(--duration) var(--cubic-bezier);
+	transition: opacity var(--duration) var(--cubic-bezier), visibility var(--duration) var(--cubic-bezier);
 }
 
 .backdrop.is-hidden {
 	opacity: 0;
 	pointer-events: none;
+	visibility: hidden;
 }
 
 .backdrop.is-hidden .modal {
@@ -267,11 +270,14 @@ button {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+
 	width: 528px;
-	height: 581px;
+	padding: 40px 40px 0 40px;
+
 	border-radius: 4px;
 	background-color: var(--main-bg-color);
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
 	transform: translate(-50%, -50%) scale(1);
 	transition: transform var(--duration) var(--cubic-bezier);
 }
@@ -289,6 +295,150 @@ button {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.modal-title {
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+}
+
+.form {
+	margin-top: 30px;
+	margin-bottom: 40px;
+}
+
+.form-field {
+	position: relative;
+	display: block;
+}
+
+.form-label {
+	position: absolute;
+	top: -18px;
+	left: 0;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+}
+
+.form-input {
+	width: 100%;
+	margin: 0 0 28px 0;
+	padding: 11px 12px 11px 42px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	box-sizing: border-box;
+	border-radius: 4px;
+	outline: 0;
+	transition: border-color var(--duration) var(--cubic-bezier);
+}
+
+.form-input:focus {
+	border-color: var(--accent-color);
+}
+
+.form-icon {
+	position: absolute;
+	top: 11px;
+	left: 12px;
+	transition: fill var(--duration) var(--cubic-bezier);
+}
+
+.form-input:focus + .form-icon {
+	fill: var(--accent-color);
+}
+
+.form-comment {
+	padding: 12px 16px;
+	margin-bottom: 20px;
+	width: 100%;
+	height: 120px;
+	resize: none;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	box-sizing: border-box;
+	border-radius: 4px;
+	outline: 0;
+	transition: border-color var(--duration) var(--cubic-bezier);
+}
+
+.form-comment:focus {
+	border-color: var(--accent-color);
+}
+
+.form-comment::placeholder {
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.01em;
+	color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field-checkbox {
+	display: flex;
+	align-items: center;
+}
+
+.form-checkbox {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.form-checkbox-icon {
+	position: absolute;
+	margin-left: 12px;
+	width: 16px;
+	height: 15px;
+	display: flex;
+	align-items: center;
+	border: 2px solid var(--main-text-color);
+	border-radius: 2px;
+	box-sizing: border-box;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	transition: background-color var(--duration) var(--cubic-bezier);
+	transition: border var(--duration) var(--cubic-bezier);
+}
+
+.form-checkbox:checked + .form-checkbox-icon {
+	background-color: var(--accent-color);
+	border: 0;
+}
+
+.form-checkbox-text {
+	margin-left: 35px;
+}
+
+.form-contract-link {
+	text-decoration-line: underline;
+	color: var(--accent-color);
+	display: contents;
+}
+
+.button.form {
+	padding: 10px 56px;
+	margin-bottom: 0;
+}
+
+.modal-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	transition: fill var(--duration) var(--cubic-bezier);
+}
+
+.modal-close:hover {
+	fill: var(--accent-color);
+}
+
+/* Преимущества */
 .feature-icon {
 	display: flex;
 	justify-content: center;
@@ -476,6 +626,7 @@ button {
 /* Футер */
 
 .footer {
+	width: auto;
 	padding-top: 60px;
 	padding-bottom: 60px;
 	background-color: var(--third-bg-color);
@@ -569,6 +720,57 @@ button {
 .footer-social-links .social-link:hover,
 .footer-social-links .social-link:focus {
 	background-color: var(--accent-color);
+}
+
+.footer-thumb {
+	margin-left: auto;
+}
+
+.email-input {
+	width: 358px;
+	height: 50px;
+	padding-left: 16px;
+	font-size: 16px;
+	line-height: 1.25;
+	cursor: pointer;
+	outline: 0;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	background-color: var(--third-bg-color);
+	transition: border-color var(--duration) var(--cubic-bezier);
+}
+
+.email-input:focus {
+	border-color: var(--accent-color);
+	color: var(--accent-color);
+}
+
+.footer-button {
+	width: 200px;
+	height: 50px;
+	margin-left: 12px;
+	margin-right: auto;
+	padding: 10px 28px;
+
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 1.87;
+	display: inline-flex;
+	align-items: center;
+	text-align: center;
+	letter-spacing: 0.06em;
+	cursor: pointer;
+	border: 0;
+	color: var(--main-bg-color);
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+}
+
+.footer-button .icon {
+	margin-left: 10px;
 }
 
 /* Страница Портфолио */
